GNOME Bugzilla – Bug 618815
mnemonics aren't displayed when Alt is already pressed before a new top level window shows up
Last modified: 2011-05-06 18:07:15 UTC
With gtk-auto-mnemonics on, open a new top level window with Alt already pressed. The mnemonics won't be displayed although they are usable. It would be nice if they were displayed without having to release Alt and press it again. To reproduce, open the About dialog on any gtk+ application, then press Alt+L without releasing Alt. The License window will appear. If one presses C, that window will close (since Alt is still pressed) but one never sees the mnemonic.
Created attachment 185854 [details] [review] GtkWindow: set mnemonics visible on focus in if modifier is pressed With gtk-auto-mnemonics on, we hide mnemonics on focus out. We should also check if the modifier is pressed on focus in and if so, show mnemonics again.
BTW, the patch is against git master. Please review, thanks.